# LitTrace

./: .gitignore  README.md  config.example.yaml  pyproject.toml
eval/golden/: materials_seed.jsonl
src/littrace/: __init__.py  access.py  agent_audits.py  agent_interactions.py  agent_strength.py  agents.py  attachments.py  auto_resume.py  autonomous_loop.py  cache.py  chat.py  citation_guard.py  citations.py  cli.py  config.py  config_wizard.py  context.py  document_composer.py  downloads.py  eval_api.py  export.py  full_text.py  golden_eval.py  harnesses.py  intent.py  llm.py  login_flow.py  models.py  parsing.py  pdf_benchmark.py  publisher_connectors.py  publisher_retrieval.py  quality_report.py  research_planner.py  research_writer.py  search.py  session.py  source_router.py  (+7 more)
tests/: test_agent_interactions.py  test_agent_strength.py  test_agents.py  test_api.py  test_attachments.py  test_auto_resume.py  test_autonomous_loop.py  test_cache.py  test_chat.py  test_citation_cache.py  test_citation_guard.py  test_cli.py  test_config.py  test_core.py  test_docling_adapter.py  test_document_composer.py  test_downloads.py  test_export.py  test_full_text.py  test_golden_eval.py  test_intent.py  test_live_search.py  test_login_flow.py  test_paddleocr_adapter.py  test_parsing.py  test_pdf_benchmark.py  test_publisher_connectors.py  test_publisher_retrieval.py  test_quality_report.py  test_research_planner.py  test_research_writer.py  test_session.py  test_storyline.py  test_storyline_review.py  test_supplementary.py  test_tables.py  test_tracing.py  test_workflow.py
(+7 files in other folders)
