[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "littrace"
version = "0.1.0"
description = "Traceable materials and chemistry research agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "langgraph>=0.2",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
agents = [
  "crewai>=0.105",
]
parsers = [
  "docling>=2.70",
  "paddleocr>=2.8",
  "paddlepaddle>=3.3",
  "pypdfium2>=4.30",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
littrace = "littrace.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"
